<resources>
    <string name="app_name">TradeFarm</string>
    <string name="title_home">Beranda</string>
    <string name="title_forecast">Prediksi</string>
    <string name="title_profile">Profil</string>
    <string name="login">Masuk menggunakan akun</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="need_account"><u>Belum punya akun? Daftar di sini</u></string>
    <string name="register_label">Daftar Sekarang</string>
    <string name="name">Nama</string>
    <string name="daftar">Daftar</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="komoditas">Komoditas</string>
    <string name="daerah">Daerah</string>
    <string name="tanggal">Tanggal</string>
    <string name="search_user_hint">Search for fruits, vegetables, groce..</string>
    <string name="lokasi">Lokasi</string>
    <string name="special_deal">Special Deal</string>
    <string name="more">See more</string>
    <string name="harga_sebelum">Rp. 21.000/kg</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="beli">Beli</string>
    <string name="contact">Kontak</string>
    <string name="change">Ubah</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan Perubahan</string>

    <string-array name="komoditas_array">
        <item>Bawang Merah</item>
        <item>Beras</item>
        <item>Cabai Merah</item>
        <item>Cabai Rawit</item>
        <item>Gula Pasir</item>
        <item>Minyak Goreng</item>
    </string-array>
    <string-array name="daerah_array">
        <item>Banten</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
    </string-array>
    <string-array name="lokasi_array">
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Banten</item>
    </string-array>
</resources>