<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/home_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/home_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        tools:ignore="contentDescription"/>

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:hint="@string/search_user_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.search.SearchBar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel_rv"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:layout_marginTop="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/layout_location" />

    <TextView
        android:id="@+id/lokasi_label"
        style="@style/Text.Body.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lokasi"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/searchBar"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:drawableLeftCompat="@drawable/outline_location_on_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        android:layout_marginTop="0dp"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/searchBar"
        app:layout_constraintTop_toBottomOf="@id/searchBar">

        <AutoCompleteTextView
            android:id="@+id/ed_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor"
            android:inputType="none"
            android:text="@string/jawa_barat"
            android:textStyle="bold"
            style="@style/Text.Body.Medium"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/product_label"
        style="@style/Text.Title.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/special_deal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carousel_rv" />

    <TextView
        android:id="@+id/more_label"
        style="@style/Text.Title.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:text="@string/more"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/product_label"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_24"
        app:drawableTint="?attr/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/more_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>