<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.farmtrade.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loginActivity"
            app:destination="@id/loginActivity"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_detailProductFragment"
            app:destination="@id/detailProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_forecast"
        android:name="com.bangkit.farmtrade.ui.forecast.ForecastFragment"
        android:label="@string/title_forecast"
        tools:layout="@layout/fragment_forecast" >
        <action
            android:id="@+id/action_navigation_forecast_to_detailForecastFragment"
            app:destination="@id/detailForecastFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.farmtrade.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailForecastFragment"
        android:name="com.bangkit.farmtrade.ui.detailforecast.DetailForecastFragment"
        android:label="Hasil Prediksi" >
        <argument
            android:name="komoditas"
            app:argType="string"
            android:defaultValue="komoditas" />
        <argument
            android:name="daerah"
            app:argType="string"
            android:defaultValue="daerah" />
        <argument
            android:name="dateToPredict"
            app:argType="string"
            android:defaultValue="12/01/2024" />
    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="com.bangkit.farmtrade.ui.login.LoginActivity"
        android:label="LoginActivity" />
    <fragment
        android:id="@+id/detailProductFragment"
        android:name="com.bangkit.farmtrade.ui.detailproduct.DetailProductFragment"
        android:label="DetailProductFragment" >
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Title" />
        <argument
            android:name="producer"
            app:argType="string"
            android:defaultValue="Producer"/>
        <argument
            android:name="image"
            app:argType="string"
            android:defaultValue='"https://fruit-vegi-list-api.cyclic.app/images/carrot.jpg"' />
        <argument
            android:name="priceBefore"
            app:argType="string"
            android:defaultValue="Rp21.000" />
        <argument
            android:name="priceAfter"
            app:argType="string"
            android:defaultValue="Rp18.000 /kg" />
        <argument
            android:name="description"
            app:argType="string"
            android:defaultValue="Description" />
        <argument
            android:name="phoneNumber"
            app:argType="string"
            android:defaultValue="085783722567" />

    </fragment>
</navigation>